test/spec_vectors/ref/fail/module_5.wat
(module (elem $elem-invalid (ref 1)))